--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
                         Ready to transform your business? Let's discuss your project
                     </p>
                 </div>
-                <form name="contact" method="POST" data-netlify="true" acti
+   <form name="contact" method="POST" data-netlify="true" acti
                 id="contactForm"
-                    name="contact"
+                name="zayed-contact"
                     method="POST"
                     data-netlify="true"
                     netlify-honeypot="bot-field"
