--- a/index.html
+++ b/index.html
@@ -248,13 +248,15 @@
                             <span class="px-3 py-1 text-xs rounded-full bg-gray-700/40 border border-gray-600 text-gray-200">RBAC</span>
                         </div>
                         <a href="#contact" class="inline-flex items-center gap-2 bg-gradient-to-r from-blue-500 to-purple-600 px-5 py-3 rounded-lg font-semibold hover:from-blue-600 hover:to-purple-700 transition-all">
-            View Project
+                            View Project
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
                             </svg>
                         </a>
                     </div>
                 </div>
+
+                <!-- Project 3 -->
                 <div class="group bg-gray-800/40 rounded-2xl border border-gray-700 hover:border-purple-500 transition-all duration-300 hover:shadow-2xl hover:shadow-purple-500/10 overflow-hidden">
                     <div class="p-8">
                         <div class="w-14 h-14 bg-gradient-to-br from-purple-500 to-pink-600 rounded-xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
@@ -342,14 +344,13 @@
             <div class="max-w-2xl mx-auto">
                 <div class="text-center mb-16">
                     <h2 class="text-4xl md:text-5xl font-bold mb-4">Get In Touch</h2>
-                     name="contact" method="POST" data-netlify="true" action="/">
-                 
+                    <p class="text-xl text-gray-400">
                         Ready to transform your business? Let's discuss your project
                     </p>
                 </div>
-   <form name="contact" method="POST" data-netlify="true" acti
-                id="contactForm"
-                name="zayed-contact"
+                <form
+                    id="contactForm"
+                    name="contact"
                     method="POST"
                     data-netlify="true"
                     netlify-honeypot="bot-field"
